Convert the mouse exit only use for update UI hover state to mouse move

This issue caused by:

1. On CrOS, we disappear the mouse cursor when keyboard keydown. This
   is only on Mac and CrOS for chrome.
2. On CrOS, we disappear the mouse cursor when touch.
3. 450edc67348bc0106da16e56d783b2c3c9a9030c introduced mouse exit event
   to update Browser UI hover state when mouse cursor hide.
4. We have a bug for overlay scrollbar because we convert mouse exit to
   mouse move so we can not fade out the scrollbars we mouse move out of
  window. Then we convert mouse exit as a mouse leave.
5. After 3 and 4, the mouse hide in 1 will send a mouse leave to js which
   the popup-div listening and disappear the popup.

In this patch we add a flag to the mouse exit event introduced at (3)
and convert that to MouseMove as the behavior before (4) so it will not
send out a mouseleave and not change the document hover state.

BUG=723535