ui/aura/window_event_dispatcher.h
@@ -77,9 +77,10 @@ class AURA_EXPORT WindowEventDispatcher : public ui::EventProcessor,
   // Dispatches a ui::ET_MOUSE_EXITED event at |point| to the |target|
   // If the |target| is NULL, we will dispatch the event to the root-window
   // TODO(beng): needed only for WTH::OnCursorVisibilityChanged().
-  ui::EventDispatchDetails DispatchMouseExitAtPoint(Window* target,
-                                                    const gfx::Point& point)
-      WARN_UNUSED_RESULT;
+  ui::EventDispatchDetails DispatchMouseExitAtPoint(
+      Window* target,
+      const gfx::Point& point,
+      bool only_for_ui_hover_state) WARN_UNUSED_RESULT;
 
   // Gesture Recognition -------------------------------------------------------
 
